<resources>
    <string name="app_name">BrewDay</string>
    <string name="conferma">Conferma</string>
    <string name="aggiungiAttrezzatura_descrizione">Serve per aggiungere un attrezzo</string>
    <string name="nome_attrezzo">Nome attrezzo</string>
    <string name="tipologia">Tipologia</string>
    <string name="capacita">Capacità (Litri)</string>
    <string name="inserisci_capacita">Inserisci capacità</string>
    <string name="inserisci_nome">Inserisci nome</string>
    <string name="modifica">Modifica</string>
    <string name="cancella_attrezzatura">Pulsante che cancella l\'attrezzatura selezionata</string>
    <string name="cancella">Cancella</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_ricette">Lista Ricette</string>
    <string name="birre">Birre</string>
    <string name="crea_ricetta">Crea Ricetta</string>
    <string name="ingredienti">Ingredienti</string>
    <string name="attrezzi">Attrezzi</string>
    <string name="tuoi_ingredienti">I tuoi Ingredienti:</string>
    <string name="bottone_crea_ricetta">Bottone crea ricetta</string>
    <string name="nome_ricetta">Nome Ricetta</string>
    <string name="brewday">BrewDay!</string>
    <string name="ricetta_per">Ricetta per</string>
    <string name="litri_di_birra">litri di Birra</string>
    <string name="uno">1</string>
    <string name="no_iingredienti_negativi">Non si possono avere ingredienti negativi</string>
    <string name="nome_ricetta_mancante">Nome ricetta mancante</string>
    <string name="litri_birra_ricetta_mancante">Litri di birra mancanti</string>
    <string name="ingredienti_ricetta_mancanti">Scegli più ingredienti</string>
    <string name="attrezzi_dati_inaccettabili">Dati inseriti inaccettabili</string>
    <string name="annulla">Annulla</string>
    <string name="brewToday">BrewToday</string>
    <string name="termina">Termina</string>
    <string name="bottone_meno">Bottone -</string>
    <string name="bottone_piu">bottone +</string>
    <string name="termina_produzione_birra">Termina produzione birra</string>
    <string name="prepara">Prepara</string>
    <string name="l_di_questa_birra">L di questa birra</string>
    <string name="quantita_base_produzione">1</string>
    <string name="massimizza_per_litri">Massimizza produzione litri</string>
    <string name="massimizza_conusmo_ingredienti">Massimizza conusmo ingredienti</string>
    <string name="cosa_prepariamo_oggi">Che cosa prepariamo oggi?</string>
    <string name="ottimizza_per_litri">Voglio produrre più birra possibile!</string>
    <string name="ottimizza_per_ingredienti">Voglio far fuori tutte le scorte che mi sono rimaste!</string>
    <string name="genera_lista_della_spesa">Genera lista della spesa</string>
    <string name="ricette">Ricette</string>
    <string name="brew_day">Brew Day!</string>
    <string name="nuova_birra">Stai preparando una nuova birra!</string>

    <string name="nessuna_ricetta_disponibile">Nessuna ricetta è attualmente disponibile per la preparazione</string>
    <string name="nessun_attrezzo_disponibile">Gli attrezzi adeguati non sono attualmente disponibili</string>
    <string name="scorte_ingredienti_insufficienti">Non disponi degli ingredienti necessari per iniziare la preparazione</string>
</resources>