<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/oneRowCard_cardview"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/oneRowCard_imageCancella"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/cancella_attrezzatura"
                android:src="@drawable/delete_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/oneRowCard_textViewNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/nome_attrezzo"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/oneRowCard_textViewCaoacita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/tipologia"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneRowCard_textViewTipo" />

            <TextView
                android:id="@+id/oneRowCard_textViewTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/capacita"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneRowCard_textViewNome" />

            <EditText
                android:id="@+id/oneRowCard_nomeReale"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:inputType="none"
                android:hint="@string/inserisci_nome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/oneRowCard_capacitaReale"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inserisci_capacita"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneRowCard_nomeReale" />

            <Spinner
                android:id="@+id/oneRowCard_tipoReale"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneRowCard_capacitaReale" />

            <ImageButton
                android:id="@+id/oneRowCard_imageButtonModifica"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/modifica"
                android:src="@drawable/edit_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/oneRowCard_imageCancella"
                android:background="@drawable/roundcorner"/>

            <ImageButton
                android:id="@+id/oneRowCard_conferma"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/conferma"
                android:src="@drawable/check_circle_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/oneRowCard_imageButtonModifica" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>