<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/oneRowCard_cardview"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/oneRowCard_imageCancella"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/md_theme_light_primaryContainer"
                android:contentDescription="@string/cancella_attrezzatura"
                android:src="@drawable/trash_can_svgrepo_com"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/oneRowCard_textViewNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/nome_attrezzo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/oneRowCard_textViewCaoacita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/tipologia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneRowCard_textViewTipo" />

            <TextView
                android:id="@+id/oneRowCard_textViewTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/capacit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneRowCard_textViewNome" />

            <EditText
                android:id="@+id/oneRowCard_nomeReale"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:inputType="none"
                android:hint="@string/inserisci_nome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/oneRowCard_capacitaReale"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inserisci_capacita"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneRowCard_nomeReale" />

            <Spinner
                android:id="@+id/oneRowCard_tipoReale"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneRowCard_capacitaReale" />

            <Button
                android:id="@+id/oneRowCard_buttonModifica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/modifica"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/oneRowCard_imageCancella" />

            <Button
                android:id="@+id/oneRowCard_conferma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/conferma"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/oneRowCard_buttonModifica" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>