<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cosa_prepariamo_oggi.CosaPrepariamoOggiFragment">


    <ImageButton
        android:id="@+id/cosaPreparareOggi_ottimizzaIngredienti"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/roundcorner"
        android:contentDescription="@string/massimizza_conusmo_ingredienti"
        android:src="@drawable/scale_24px"
        app:layout_constraintBottom_toBottomOf="@+id/cosaPreparareOggi_ottimizzaLitri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cosaPreparareOggi_ottimizzaLitri"
        app:layout_constraintTop_toTopOf="@+id/cosaPreparareOggi_ottimizzaLitri" />

    <ImageButton
        android:id="@+id/cosaPreparareOggi_ottimizzaLitri"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundcorner"
        android:contentDescription="@string/massimizza_per_litri"
        android:src="@drawable/water_full_24px"
        app:layout_constraintEnd_toStartOf="@+id/cosaPreparareOggi_ottimizzaIngredienti"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView_logoApp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_cosaPrepariamoOggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/cosa_prepariamo_oggi"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logoApp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cosaPrepariamoOggi">

        <TextView
            android:id="@+id/textView_ottimizzaLitri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/ottimizza_per_litri" />

        <TextView
            android:id="@+id/textView_ottimizzaIngredienti"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/ottimizza_per_ingredienti" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>